--- a/client/public/css/main-css/main.sass
+++ b/client/public/css/main-css/main.sass
@@ -98,3 +98,12 @@
 
 h4.bold.grey-text.center-align
   margin-top: 150px !important
+
+.bold
+  font:
+    weight: bolder
+
+.light__font
+  font:
+    weight: lighter
+    size: 14px
