--- a/client/public/css/overwrite/overwrite.sass
+++ b/client/public/css/overwrite/overwrite.sass
@@ -14,6 +14,15 @@
     overflow: visible
     width: 100%
 
+.card
+  .center__image
+    position: relative !important
+    max-height: 100px
+    overflow: hidden
+
+    img
+      transform: translateY(-35%)  
+    
 .input-field
   margin-top: 0 !important
 
