fix: image upload to cloudinary and local server, updating and creating center.

--- a/client/public/css/app.css
+++ b/client/public/css/app.css
@@ -8,9 +8,9 @@
 /*padding mixins*/
 /*Margin mixins*/
 /*overwrites*/
-.toast {
-  background-color: #5A9EAB !important;
-}
+/*.toast {*/
+  /*background-color: #5A9EAB !important;*/
+/*}*/
 
 .steel_blue {
   background: #5A9EAB;
