--- a/client/public/css/overwrite/overwrite.sass
+++ b/client/public/css/overwrite/overwrite.sass
@@ -1,5 +1,5 @@
-.toast
-  background-color: $steel_blue !important
+//.toast
+//  background-color: $steel_blue !important
 
 .steel_blue
   background: $steel_blue
@@ -21,8 +21,8 @@
     overflow: hidden
 
     img
-      transform: translateY(-35%)  
-    
+      transform: translateY(-35%)
+
 .input-field
   margin-top: 0 !important
 
