fix: image upload to cloudinary when creating and editing an event.

--- a/client/public/css/overwrite/overwrite.sass
+++ b/client/public/css/overwrite/overwrite.sass
@@ -1,6 +1,9 @@
 //.toast
 //  background-color: $steel_blue !important
 
+.card .card-reveal
+  word-wrap: break-word
+
 .steel_blue
   background: $steel_blue
 
