--- a/client/public/css/app.css
+++ b/client/public/css/app.css
@@ -12,6 +12,10 @@
   /*background-color: #5A9EAB !important;*/
 /*}*/
 
+.card .card-reveal{
+  word-wrap: break-word;
+}
+
 .steel_blue {
   background: #5A9EAB;
 }
