--- a/client/public/css/app.css
+++ b/client/public/css/app.css
@@ -420,6 +420,10 @@ h4.bold.grey-text.center-align {
 }
 
 /*center details css*/
+.center__holdr{
+  padding-top: 65px
+}
+
 .center__details {
   padding: 10px;
 }
