--- a/client/public/css/app.css
+++ b/client/public/css/app.css
@@ -255,6 +255,7 @@ nav ul a:hover {
   height: 25px;
   line-height: 25px;
   font-size: 1rem;
+  user-select: none;
   -webkit-user-select: none;
   -moz-user-select: none;
   -khtml-user-select: none;
@@ -462,6 +463,7 @@ input[type="range"] {
     rgba(144, 236, 146, 0.7)
   );
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
