fix: build client application

--- a/client/public/css/app.css
+++ b/client/public/css/app.css
@@ -488,6 +488,7 @@ input[type="range"] {
 
 h4.bold.grey-text.center-align {
   margin-top: 150px !important;
+  margin-bottom: 275px;
 }
 
 .bold {
